Added self, footer, experience, edu

--- a/src/Description.css
+++ b/src/Description.css
@@ -1,5 +1,5 @@
 .background_one{
-    background-color: #edf2ff;
+    background-color: #FFFFFF;
 }
 .background_two{
     background-color: #bacdff;
