--- a/src/Main.css
+++ b/src/Main.css
@@ -1,16 +1,21 @@
 @import './fonts.css';
 
 .landing{
-    background: url('./imgs/landing_final.png');
-    background-repeat: no-repeat;
-    background-size: cover;
     min-height: 750px;
+    background-image: url('./imgs/background_computer_alt.png');
+    background-color: transparent;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
+
+/* .bg{
+    background-color: '#BAE0FF';
+} */
 
 .featured{
     padding-top: 14%;
     padding-bottom: 14%;
-    color: #121489;
+    color: black;
     font-size: 5.5em;
     font-weight: 500;
     font-family: 'Playfair Display', serif;
@@ -19,7 +24,7 @@
 .statements{
     font-size: 1.35em;
     font-family: 'HKGrotesk_light';
-    color: #121489;
+    color: black;
 }
 
 .stacked{
