--- a/src/Main.css
+++ b/src/Main.css
@@ -1,9 +1,9 @@
 @import './fonts.css';
 
 .landing{
-    min-height: 750px;
-    background-image: url('./imgs/background_computer_alt.png');
-    background-color: transparent;
+    min-height: 830px;
+    background-image: url('./imgs/Asymptote3.png');
+    background-color: #88D2E8;
     background-size: cover;
     background-repeat: no-repeat;
 }
