--- a/src/Self.css
+++ b/src/Self.css
@@ -1,12 +1,34 @@
 .self_section{
-    background: rgb(168,188,241);
-    background: linear-gradient(0deg, rgba(168,188,241,1) 25%, rgba(217,228,255,1) 74%, rgba(240,251,255,1) 100%);
+    background-color: #ffffff;
     min-height: 75vh;
     padding-top: 5vh;
+    position: relative;
 }
 .jumbotron_bg{
     background: transparent;
 }
 .carousel-inner img{
-    max-height: 450px;
+    max-height: 397px;
+}
+.last_row{
+    padding-bottom: 10%;
+}
+.custom-shape-divider-bottom-1613760855 {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    overflow: hidden;
+    line-height: 0;
+}
+
+.custom-shape-divider-bottom-1613760855 svg {
+    position: relative;
+    display: block;
+    width: calc(100% + 1.3px);
+    height: 150px;
+}
+
+.custom-shape-divider-bottom-1613760855 .shape-fill {
+    fill: #88A2E8;
 }
