--- a/src/End.css
+++ b/src/End.css
@@ -1,4 +1,49 @@
 .last-section{
-    height: 1000px;
+    height: 850px;
     background-color: #88A2E8;
 }
+.thought {
+    display:flex;
+    background-color:#fff;
+    padding:28px;
+    /* margin: 30px; */
+    border-radius: 42px;
+    min-width:40px;
+    max-width:220px;
+    min-height:40px;
+    position:relative;
+    align-items:center;
+    justify-content:center;
+    text-align:center;
+  }
+  .thought:before,
+  .thought:after {
+    content:"";
+    background-color:#fff;
+    border-radius:50%;
+    display:block;
+    position:absolute;
+    /* z-index:-1; */
+  }
+  .thought:before {
+    width:44px;
+    height:44px;
+    top:-12px;
+    left:28px;
+    box-shadow:-50px 30px 0 -12px #fff;
+  }
+  .thought:after {
+    bottom:-10px;
+    right:26px;
+    width:30px;
+    height:30px;
+    box-shadow:40px -34px 0 0 #fff,
+               -28px -6px 0 -2px #fff,
+               -24px 17px 0 -6px #fff,
+               -5px 25px 0 -10px #fff;
+    
+  }
+  .thoughtmarg{
+      margin-top: 3%;
+      margin-bottom: 3%;
+  }
