--- a/src/Main.css
+++ b/src/Main.css
@@ -2,32 +2,56 @@
 
 .landing{
     min-height: 830px;
-    background-image: url('./imgs/Asymptote3.png');
-    background-color: #88D2E8;
-    background-size: cover;
-    background-repeat: no-repeat;
+    position: relative;
+    background: rgb(255,101,130);
+    background: -moz-linear-gradient(135deg, rgba(255,101,130,1) 0%, rgba(254,133,104,1) 67%, rgba(252,176,69,1) 100%);
+    background: -webkit-linear-gradient(135deg, rgba(255,101,130,1) 0%, rgba(254,133,104,1) 67%, rgba(252,176,69,1) 100%);
+    background: linear-gradient(135deg, rgba(255,101,130,1) 0%, rgba(254,133,104,1) 67%, rgba(252,176,69,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ff6582",endColorstr="#fcb045",GradientType=1);
+    padding-top: 10%;
+    font-family: 'Lora', serif;
 }
 
+.introduction{
+    padding-top: 10%;
+}
 /* .bg{
     background-color: '#BAE0FF';
 } */
 
-.featured{
+/* .featured{
     padding-top: 14%;
     padding-bottom: 14%;
     color: black;
     font-size: 5.5em;
     font-weight: 500;
-    font-family: 'Playfair Display', serif;
+    font-family: 'Lora', serif;
 }
 
 .statements{
     font-size: 1.35em;
     font-family: 'HKGrotesk_light';
     color: black;
+} */
+
+.custom-shape-divider-bottom-1613767261 {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    overflow: hidden;
+    line-height: 0;
+    transform: rotate(180deg);
 }
 
-.stacked{
-    height: 250px;
-    padding-bottom: 3%;
+.custom-shape-divider-bottom-1613767261 svg {
+    position: relative;
+    display: block;
+    width: calc(100% + 1.3px);
+    height: 106px;
+    transform: rotateY(180deg);
+}
+
+.custom-shape-divider-bottom-1613767261 .shape-fill {
+    fill: #88d2e8;
 }
