--- a/src/fonts.css
+++ b/src/fonts.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital@0;1&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;1,400;1,500&family=Playfair+Display:ital@0;1&display=swap');
 @font-face {
     font-family: 'HK-Grotesk_medium';
     src: url('./fonts/hk-grotesk/HKGrotesk-Medium.otf');
