--- a/src/Experience.css
+++ b/src/Experience.css
@@ -8,10 +8,10 @@ body{margin-top:20px;}
 }
 .section-title h2 {
     font-weight: 700;
-    color: #20247b;
+    color: #0C90A5;
     font-size: 45px;
     margin: 0 0 15px;
-    border-left: 5px solid #fc5356;
+    border-left: 5px solid #D8280D;
     padding-left: 15px;
 }
 .section-title {
@@ -22,6 +22,9 @@ body{margin-top:20px;}
     font-size: 18px;
 }
 
+/* .font-styling{
+    
+} */
 /* Resume Box
 ---------------------*/
 .resume-box {
@@ -47,7 +50,7 @@ body{margin-top:20px;}
   position: absolute;
   top: 0px;
   left: 20px;
-  border-left: 1px dashed #fc5356;
+  border-left: 1px dashed #D8280D;
   bottom: 0;
 }
 .resume-box .icon {
@@ -56,7 +59,7 @@ body{margin-top:20px;}
   position: absolute;
   left: 0;
   right: 0;
-  color: #fc5356;
+  color: #D8280D;
   line-height: 40px;
   background: #ffffff;
   text-align: center;
@@ -65,7 +68,7 @@ body{margin-top:20px;}
   border-radius: 50%;
 }
 .resume-box .time {
-  background: #fc5356;
+  background: #D8280D;
   color: #ffffff;
   font-size: 10px;
   padding: 2px 10px;
@@ -76,7 +79,7 @@ body{margin-top:20px;}
 }
 .resume-box h5 {
   font-weight: 700;
-  color: #20247b;
+  color: #0C90A5;
   font-size: 16px;
   margin-bottom: 10px;
 }
@@ -89,6 +92,6 @@ body{margin-top:20px;}
     position: absolute;
     top: 0px;
     left: 20px;
-    border-left: 1px dashed #fc5356;
+    border-left: 1px dashed #D8280D;
     bottom: 0;
 }
